Remove obsolete clearfix class

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 				<!-- Start details for portfolio project 1 -->
 				<div id="slidingdiv1" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Raspberry Pi</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -275,7 +275,7 @@
 				<!-- Start details for portfolio project 2 -->
 				<div id="slidingdiv2" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Odroid C1</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -304,7 +304,7 @@
 				<!-- Start details for portfolio project 3 -->
 				<div id="slidingdiv3" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Odroid C2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -329,7 +329,7 @@
 				<!-- Start details for portfolio project 4 -->
 				<div id="slidingdiv4" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Odroid XU3/XU4/MC1/HC1/HC2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -354,7 +354,7 @@
 				<!-- Start details for portfolio project 5 -->
 				<div id="slidingdiv5" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>PINE A64</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -381,7 +381,7 @@
 				<!-- Start details for portfolio project 6 -->
 				<div id="slidingdiv6" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi NEO</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -408,7 +408,7 @@
 				<!-- Start details for portfolio project 7 -->
 				<div id="slidingdiv7" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi NEO Air</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -436,7 +436,7 @@
 				<!-- Start details for portfolio project 8 -->
 				<div id="slidingdiv8" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi M1/T1</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -463,7 +463,7 @@
 				<!-- Start details for portfolio project 9 -->
 				<div id="slidingdiv9" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi M2/T2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -490,7 +490,7 @@
 				<!-- Start details for portfolio project 10 -->
 				<div id="slidingdiv10" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi M3/T3</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -517,7 +517,7 @@
 				<!-- Start details for portfolio project 11 -->
 				<div id="slidingdiv11" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Odroid N1</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -544,7 +544,7 @@
 				<!-- Start details for portfolio project 12 -->
 				<div id="slidingdiv12" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Pinebook</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -572,7 +572,7 @@
 				<!-- Start details for portfolio project 13 -->
 				<div id="slidingdiv13" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Hyper-V (Community image by @yumiris)</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -597,7 +597,7 @@
 				<!-- Start details for portfolio project 14 -->
 				<div id="slidingdiv14" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Odroid N2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -624,7 +624,7 @@
 				<!-- Start details for portfolio project 15 -->
 				<div id="slidingdiv15" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>VMware</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -649,7 +649,7 @@
 				<!-- Start details for portfolio project 16 -->
 				<div id="slidingdiv16" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>VirtualBox</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -674,7 +674,7 @@
 				<!-- Start details for portfolio project 17 -->
 				<div id="slidingdiv17" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>ROCK Pi 4</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -701,7 +701,7 @@
 				<!-- Start details for portfolio project 18 -->
 				<div id="slidingdiv18" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>ZeroPi</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -727,7 +727,7 @@
 				<!-- Start details for portfolio project 19 -->
 				<div id="slidingdiv19" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Sparky SBC (Allo)</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -759,7 +759,7 @@
 				<!-- Start details for portfolio project 20 -->
 				<div id="slidingdiv20" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>ASUS Tinker Board</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -786,7 +786,7 @@
 				<!-- Start details for portfolio project 21 -->
 				<div id="slidingdiv21" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi Fire3</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -813,7 +813,7 @@
 				<!-- Start details for portfolio project 22 -->
 				<div id="slidingdiv22" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi M1 Plus</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -841,7 +841,7 @@
 				<!-- Start details for portfolio project 23 -->
 				<div id="slidingdiv23" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi NEO2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -868,7 +868,7 @@
 				<!-- Start details for portfolio project 24 -->
 				<div id="slidingdiv24" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi K1 Plus</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -895,7 +895,7 @@
 				<!-- Start details for portfolio project 25 -->
 				<div id="slidingdiv25" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Firefly RK3399</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -921,7 +921,7 @@
 				<!-- Start details for portfolio project 26 -->
 				<div id="slidingdiv26" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi NEO2 Black</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -949,7 +949,7 @@
 				<!-- Start details for portfolio project 27 -->
 				<div id="slidingdiv27" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi M4V2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -976,7 +976,7 @@
 				<!-- Start details for portfolio project 28 -->
 				<div id="slidingdiv28" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>PINE H64</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1004,7 +1004,7 @@
 				<!-- Start details for portfolio project 29 -->
 				<div id="slidingdiv29" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>ROCKPro64</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1031,7 +1031,7 @@
 				<!-- Start details for portfolio project 30 -->
 				<div id="slidingdiv30" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Native PC for BIOS/CSM</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1063,7 +1063,7 @@
 				<!-- Start details for portfolio project 31 -->
 				<div id="slidingdiv31" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>ROCK64</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1092,7 +1092,7 @@
 				<!-- Start details for portfolio project 32 -->
 				<div id="slidingdiv32" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Native PC for UEFI</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1120,7 +1120,7 @@
 				<!-- Start details for portfolio project 33 -->
 				<div id="slidingdiv33" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Other device (beta)</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1145,7 +1145,7 @@
 				<!-- Start details for portfolio project 34 -->
 				<div id="slidingdiv34" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPC T4</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1172,7 +1172,7 @@
 				<!-- Start details for portfolio project 35 -->
 				<div id="slidingdiv35" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>ROCK Pi S</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1199,7 +1199,7 @@
 				<!-- Start details for portfolio project 36 -->
 				<div id="slidingdiv36" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi NEO Plus2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1225,7 +1225,7 @@
 				<!-- Start details for portfolio project 37 -->
 				<div id="slidingdiv37" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPC M4</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1252,7 +1252,7 @@
 				<!-- Start details for portfolio project 38 -->
 				<div id="slidingdiv38" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi NEO4</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1279,7 +1279,7 @@
 				<!-- Start details for portfolio project 39 -->
 				<div id="slidingdiv39" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi NEO3</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1306,7 +1306,7 @@
 				<!-- Start details for portfolio project 40 -->
 				<div id="slidingdiv40" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi R2S</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1333,7 +1333,7 @@
 				<!-- Start details for portfolio project 41 -->
 				<div id="slidingdiv41" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>NanoPi K2</h3>
 							<span class="show_hide close"></span>
 						</div>
@@ -1360,7 +1360,7 @@
 				<!-- Start details for portfolio project 42 -->
 				<div id="slidingdiv42" class="toggleDiv single-project">
 					<div class="row">
-						<div class="col-md-12 project-title clearfix">
+						<div class="col-md-12 project-title">
 							<h3>Odroid C4/HC4</h3>
 							<span class="show_hide close"></span>
 						</div>
