Use intended smaller OpenTyrian image for details page
while keeping the larger as link target, when clicking the smaller image.

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -986,7 +986,7 @@
 				<!-- End details for portfolio project 43 -->
 				<!-- Start details for portfolio project 44 -->
 				<div id="slidingdiv44" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/opentyrian_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/opentyrian_2.jpg" alt="OpenTyrian" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/opentyrian_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/opentyrian_1.jpg" alt="OpenTyrian screenshot" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
