Do not add now obsolete "animated" class to animate elements (#47)
* Do not add now obsolete "animated" class to animate elements

* Update sitemap timestamps on deployment

* Delete unused image

In phpBB an old thread uses this image, but has it added as phpBB-internal attachment.

* Remove obsolete duplicate Gogs logo

* Remove obsolete duplicate Koel logo

* Use intended smaller OpenTyrian image for details page

while keeping the larger as link target, when clicking the smaller image.

* Remove unused image

* Remove obsolete SickRage image, replaced with Medusa

* Remove obsolete SickRage image, replaced with Medusa

* Remove obsolete SickRage image, replaced with Medusa

* Add reformatted Tor Hotspot images

* Use new Tor WiFi Hotspot images

* Remove obsolete image

* Syntax

* [ImgBot] Optimize images

*Total -- 184.49kb -> 164.66kb (10.75%)

/images/dietpi-logo_128x128.png -- 13.22kb -> 10.62kb (19.7%)
/images/dietpi-software/torwifihotspot_1.jpg -- 113.64kb -> 100.77kb (11.32%)
/images/dietpi-software/torwifihotspot_0.jpg -- 40.59kb -> 36.67kb (9.66%)
/apple-touch-icon.png -- 17.04kb -> 16.60kb (2.55%)

Signed-off-by: ImgBotApp <ImgBotHelp@gmail.com>

Co-authored-by: ImgBotApp <ImgBotHelp@gmail.com>

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -986,7 +986,7 @@
 				<!-- End details for portfolio project 43 -->
 				<!-- Start details for portfolio project 44 -->
 				<div id="slidingdiv44" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/opentyrian_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/opentyrian_2.jpg" alt="OpenTyrian" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/opentyrian_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/opentyrian_1.jpg" alt="OpenTyrian screenshot" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -1447,7 +1447,7 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 				</div>
 				<!-- Start details for portfolio project 69 -->
 				<div id="slidingdiv69" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/torwifihotspot_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/torwifihotspot_0.jpg" alt="Tor HotSpot" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/torwifihotspot_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/torwifihotspot_1.jpg" alt="Tor WiFi logo" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -3094,7 +3094,7 @@ Perfect for users requiring anonymity and privacy.</p>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix WiFi">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv69">
-							<img src="images/dietpi-software/torwifihotspot_0.jpg" alt="project 69" loading="lazy">
+							<img src="images/dietpi-software/torwifihotspot_0.jpg" alt="Tor WiFi logo" loading="lazy">
 							<i class="more"></i>
 							<h3>Tor HotSpot</h3>
 							<p>Tor enabled WiFi HotSpot</p>
