Remove obsolete class from DietPi logo in navbar

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -44,7 +44,7 @@
 	<body>
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-xl">
-				<img class="scrollup" src="images/dietpi-logo_240x80.png" alt="Logo" loading="lazy">
+				<img src="images/dietpi-logo_240x80.png" alt="Logo" loading="lazy">
 				<!-- Navigation button, visible on small resolution -->
 				<button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse"><svg viewBox="0 0 12 12"><path d="M1 1h10M1 6h10M1 11h10"/></svg></button>
 				<!-- Main navigation -->
