--- a/contribute.html
+++ b/contribute.html
@@ -71,8 +71,10 @@
 					<h1>Grow in 2021</h1>
 					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:orange">even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), webhosting for Dietpi.com and future development. 
 						<br/><br/> This allows us to continue working on DietPi, make it better with every new update.
-						<br/><br/><img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
 						<br/><br/>
+						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;" viewBox="0 0 318 328.75" x="0px" y="0px" fill-rule="evenodd" clip-rule="evenodd"><defs><style type="text/css">
+							.fil0 {fill:black}
+						   </style></defs><g><path class="fil0" d="M60 61c-4,-23 -40,-24 -42,-2 -4,40 65,14 70,82 -8,-46 -89,-34 -88,-81 1,-30 52,-37 60,1z"/><path class="fil0" d="M139 209c5,-92 -82,-81 -84,-159 0,-1 0,-3 0,-4 0,-25 50,-46 113,-46 63,0 114,21 114,46 0,1 0,3 0,4 -2,78 -90,67 -85,159 -19,2 -38,2 -58,0zm29 -204c59,0 107,18 107,41 0,23 -48,41 -107,41 -59,0 -106,-18 -106,-41 0,-23 47,-41 106,-41z"/><path class="fil0" d="M306 175c8,8 12,16 12,25 0,35 -66,63 -148,63 -82,0 -149,-28 -149,-63 0,-9 5,-17 13,-25 -1,3 -1,5 -1,7 0,35 61,64 137,64 75,0 137,-29 137,-64 0,-2 -1,-4 -1,-7z"/><path class="fil0" d="M240 156c4,7 7,15 7,23 0,32 -35,58 -77,58 -43,0 -77,-26 -77,-58 0,-8 2,-16 6,-23 0,2 0,4 0,6 0,33 32,59 71,59 39,0 71,-26 71,-59 0,-2 0,-4 -1,-6z"/><path class="fil0" d="M168 15c48,0 87,14 87,31 0,17 -39,31 -87,31 -48,0 -87,-14 -87,-31 0,-17 39,-31 87,-31zm0 5c41,0 74,12 74,26 0,15 -33,26 -74,26 -41,0 -74,-11 -74,-26 0,-14 33,-26 74,-26z"/><ellipse class="fil0" cx="168" cy="46" rx="55" ry="20"/></g></svg>						<br/><br/>
 						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. 
 						<br/><b>Enable us to grow in 2021 !</b>
 					</p>
