--- a/contribute.html
+++ b/contribute.html
@@ -86,9 +86,8 @@
 				<nav class="nav nav-pills" id="downloadinfo" style="display:none">
 					<button class="nav-link filter" data-filter=".Report">Report / Diagnose issues</button>
 					<button class="nav-link filter" data-filter=".Ideas">Contribute with ideas</button>
-					<button class="nav-link filter" data-filter=".Community">Be part of community</button>
+					<button class="nav-link filter" data-filter=".Community">Part of community & Share experiences</button>
 					<button class="nav-link filter" data-filter=".Expand">Expand code / documentation</button>
-					<button class="nav-link filter" data-filter=".Social">Follow on social media</button>
 				</nav>
 				<!-- Start details for portfolio project 1 -->
 				<div id="slidingdiv1" class="toggleDiv row single-project">
@@ -165,22 +164,18 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>GNUstep</h3>
+								<h3>Test configurations</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/desktop/#gnustep" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Unique, alternative appearance</div>
-								<div><span>Cons:</span>Lacks popularity</div>
-							</div>
-							<p>Unique desktop</p>
+							<p>There is often the case when we need to check a new installation on a specific SBC (Single Board Computer). ExamplesÆ
+								 Allocating time to do such installation provides a big help to us.</p>
 							<div class="project-title"></div>
 							<br>
 							<ul>
-								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
+								<li>A driver installation for a specific SBC</li>
+								<li>or check of a performance tweak.</li>
 							</ul>
+							Browse <a>DietPi issues on GitHub</a> and find these items.</p>
 						</div>
 					</div>
 				</div>
@@ -338,6 +333,8 @@
 				</div>
 				<!-- End details for portfolio project 11 -->
 				<!-- END details for portfolio -->
+
+
 				<div id="portfolio-grid" class="row">
 					<!-- Desktops -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
@@ -345,7 +342,7 @@
 							<img src="images/contribute/diagnose2.jpg" alt="Report an issue" loading="lazy">
 							<i class="more"></i>
 							<h3>Report an issue</h3>
-							<p>Bug or security issue</p>
+							<p>Bugs or security issues</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -354,7 +351,7 @@
 							<img src="images/contribute/investigate.jpg" alt="Investigate / Help" loading="lazy">
 							<i class="more"></i>
 							<h3>Diagnose issues</h3>
-							<p>Investigate & Help</p>
+							<p>Investigate & Discover the reasons</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -362,17 +359,17 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv3">
 							<img src="images/contribute/question.jpg" alt="project 3" loading="lazy">
 							<i class="more"></i>
-							<h3>Help / Questions</h3>
-							<p>Answer questions</p>
+							<h3>Help answering questions</h3>
+							<p>Answer questions, Give feedback</p>
 							<div class="mask"></div>
 						</a>
 					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv4">
 							<img src="images/dietpi-software/gnustep_0.jpg" alt="project 4" loading="lazy">
 							<i class="more"></i>
-							<h3>GNUstep</h3>
-							<p>Alternative/unique Desktop</p>
+							<h3>Test configurations</h3>
+							<p>Run specific tests</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -380,8 +377,8 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv5">
 							<img src="images/dietpi-software/chromium_0.jpg" alt="project 5" loading="lazy">
 							<i class="more"></i>
-							<h3>Chromium</h3>
-							<p>Web browser + Kiosk mode</p>
+							<h3>Improve DietPi website</h3>
+							<p>Help to improve & extend</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -390,26 +387,26 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv6">
 							<img src="images/dietpi-software/vnc_0.jpg" alt="project 6" loading="lazy">
 							<i class="more"></i>
-							<h3>TigerVNC</h3>
-							<p>Remote Desktop</p>
+							<h3>Extend DietPi Docs</h3>
+							<p>Bring more details & samples</p>
 							<div class="mask"></div>
 						</a>
 					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv7">
 							<img src="images/dietpi-software/nomachine_0.jpg" alt="project 7" loading="lazy">
 							<i class="more"></i>
-							<h3>NoMachine</h3>
-							<p>Remote Desktop Solution</p>
+							<h3>New software titles</h3>
+							<p>Suggest features & software</p>
 							<div class="mask"></div>
 						</a>
 					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Expand">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv8">
 							<img src="images/dietpi-software/xrdp_0.jpg" alt="project 8" loading="lazy">
 							<i class="more"></i>
-							<h3>XRDP</h3>
-							<p>Remote Desktop</p>
+							<h3>Extend DietPi</h3>
+							<p>Bring contributions in GitHub</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -417,27 +414,26 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv9">
 							<img src="images/dietpi-software/realvnc_0.jpg" alt="project 9" loading="lazy">
 							<i class="more"></i>
-							<h3>RealVNC</h3>
-							<p>Remote Desktop</p>
+							<h3>Use DietPi Forum</h3>
+							<p>Share & Receive help</p>
 							<div class="mask"></div>
 						</a>
 					</div>
-					<!-- Media -->
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Expand">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv10">
 							<img src="images/dietpi-software/kodi_0.jpg" alt="project 10" loading="lazy">
 							<i class="more"></i>
-							<h3>Kodi</h3>
-							<p>Media Centre</p>
+							<h3>Write about DietPi</h3>
+							<p>Spread the word</p>
 							<div class="mask"></div>
 						</a>
 					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Expand">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv11">
-							<img src="images/dietpi-software/ympd_0.jpg" alt="project 11" loading="lazy">
+							<img src="images/dietpi-software/kodi_0.jpg" alt="project 11" loading="lazy">
 							<i class="more"></i>
-							<h3>ympd</h3>
-							<p>Lightweight MPD web interface</p>
+							<h3>Social media</h3>
+							<p>Share info & love</p>
 							<div class="mask"></div>
 						</a>
 					</div>
